--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -691,22 +691,12 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
-{%             if peer_group.additional_paths.send is arista.avd.defined %}
-{%                 set evpn_pg_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send' %}
-{%                 if peer_group.additional_paths.send == 'null' %}
-{%                     set evpn_pg_add_path = 'no ' ~ evpn_pg_add_path ~ ' any' %}
-{%                 else %}
-{%                     if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined and peer_group.additional_paths.send == 'ecmp' %}
-{%                         set evpn_pg_add_path = evpn_pg_add_path ~ ' ecmp limit ' ~ peer_group.additional_paths.send_ecmp_limit %}
-{%                     elif peer_group.additional_paths.send_limit is arista.avd.defined and peer_group.additional_paths.send == 'limit' %}
-{%                         set evpn_pg_add_path = evpn_pg_add_path ~ ' limit ' ~ peer_group.additional_paths.send_limit %}
-{%                     else %}
-{%                         set evpn_pg_add_path = evpn_pg_add_path ~ ' ' ~ peer_group.additional_paths.send %}
-{%                     endif %}
-{%                 endif %}
-{%                 if evpn_pg_add_path is arista.avd.defined %}
-      {{ evpn_pg_add_path }}
-{%                 endif %}
+{%             if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send ecmp limit {{ peer_group.additional_paths.send_ecmp_limit }}
+{%             elif peer_group.additional_paths.send_limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send limit {{ peer_group.additional_paths.send_limit }}
+{%             elif peer_group.additional_paths.send is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send {{ peer_group.additional_paths.send }}
 {%             endif %}
 {%             if peer_group.domain_remote is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} domain remote
@@ -1269,18 +1259,12 @@ router bgp {{ router_bgp.as }}
 {%         if router_bgp.address_family_path_selection.bgp.additional_paths.receive is arista.avd.defined(true) %}
       bgp additional-paths receive
 {%         endif %}
-{%         if router_bgp.address_family_path_selection.bgp.additional_paths.send is arista.avd.defined %}
-{%             set ps_add_path = 'bgp additional-paths send' %}
-{%             if router_bgp.address_family_path_selection.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_path_selection.bgp.additional_paths.send == 'ecmp' %}
-{%                 set ps_add_path = ps_add_path ~ ' ecmp limit ' ~ router_bgp.address_family_path_selection.bgp.additional_paths.send_ecmp_limit %}
-{%             elif router_bgp.address_family_path_selection.bgp.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_path_selection.bgp.additional_paths.send | arista.avd.default == 'limit' %}
-{%                 set ps_add_path = ps_add_path ~ ' send limit ' ~ router_bgp.address_family_path_selection.bgp.additional_paths.send_limit %}
-{%             else %}
-{%                 set ps_add_path = ps_add_path ~ ' ' ~ router_bgp.address_family_path_selection.bgp.additional_paths.send %}
-{%             endif %}
-{%             if ps_add_path is arista.avd.defined %}
-      {{ ps_add_path }}
-{%             endif %}
+{%         if router_bgp.address_family_path_selection.bgp.additional_paths.send_ecmp_limit is arista.avd.defined %}
+      bgp additional-paths send ecmp limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.send_ecmp_limit }}
+{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send_limit is arista.avd.defined %}
+      bgp additional-paths send limit {{ router_bgp.address_family_path_selection.bgp.additional_paths.send_limit }}
+{%         elif router_bgp.address_family_path_selection.bgp.additional_paths.send is arista.avd.defined %}
+      bgp additional-paths send {{ router_bgp.address_family_path_selection.bgp.additional_paths.send }}
 {%         endif %}
 {%         for peer_group in router_bgp.address_family_path_selection.peer_groups | arista.avd.natural_sort('name') %}
 {%             if peer_group.activate is arista.avd.defined(true) %}
@@ -1291,18 +1275,12 @@ router bgp {{ router_bgp.as }}
 {%             if peer_group.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} additional-paths receive
 {%             endif %}
-{%             if peer_group.additional_paths.send is arista.avd.defined %}
-{%                 set ps_pg_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send' %}
-{%                 if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined and peer_group.additional_paths.send | arista.avd.default == 'ecmp' %}
-{%                     set ps_pg_add_path = ps_pg_add_path ~ ' ecmp limit ' ~ peer_group.additional_paths.send_ecmp_limit %}
-{%                 elif peer_group.additional_paths.send_limit is arista.avd.defined and peer_group.additional_paths.send | arista.avd.default == 'limit' %}
-{%                     set ps_pg_add_path = ps_pg_add_path ~ ' limit ' ~ peer_group.additional_paths.send_limit %}
-{%                 else %}
-{%                     set ps_pg_add_path = ps_pg_add_path ~ ' ' ~ peer_group.additional_paths.send %}
-{%                 endif %}
-{%                 if ps_pg_add_path is arista.avd.defined %}
-      {{ ps_pg_add_path }}
-{%                 endif %}
+{%             if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send ecmp limit {{ peer_group.additional_paths.send_ecmp_limit }}
+{%             elif peer_group.additional_paths.send_limit is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send limit {{ peer_group.additional_paths.send_limit }}
+{%             elif peer_group.additional_paths.send is arista.avd.defined %}
+      neighbor {{ peer_group.name }} additional-paths send {{ peer_group.additional_paths.send }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_path_selection.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -1314,18 +1292,12 @@ router bgp {{ router_bgp.as }}
 {%             if neighbor.additional_paths.receive is arista.avd.defined(true) %}
       neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
-{%             if neighbor.additional_paths.send is arista.avd.defined %}
-{%                 set ps_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-paths send' %}
-{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send | arista.avd.default == 'ecmp' %}
-{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' ecmp limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
-{%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
-{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_limit %}
-{%                 else %}
-{%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' ' ~ neighbor.additional_paths.send %}
-{%                 endif %}
-{%                 if ps_neighbor_add_path is arista.avd.defined %}
-      {{ ps_neighbor_add_path }}
-{%                 endif %}
+{%             if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} additional-paths send ecmp limit {{ neighbor.additional_paths.send_ecmp_limit }}
+{%             elif neighbor.additional_paths.send_limit is arista.avd.defined %}
+      neighbor {{ neighbor.ip_address }} additional-paths send limit {{ neighbor.additional_paths.send_limit }}
+{%             elif neighbor.additional_paths.send is arista.avd.defined  %}
+      neighbor {{ neighbor.ip_address }} additional-paths send {{ neighbor.additional_paths.send }}
 {%             endif %}
 {%         endfor %}
 {%     endif %}
@@ -1815,21 +1787,12 @@ router bgp {{ router_bgp.as }}
 {%             if vrf.address_family_ipv4.bgp.additional_paths.receive is arista.avd.defined(true) %}
          bgp additional-paths receive
 {%             endif %}
-{%             if vrf.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
-{%                 set ipv4_add_path = 'bgp additional-paths send' %}
-{%                 if vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and vrf.address_family_ipv4.bgp.additional_paths.send == 'ecmp' %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' ecmp limit ' ~ vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit %}
-{%                 elif vrf.address_family_ipv4.bgp.additional_paths.send_limit is arista.avd.defined and vrf.address_family_ipv4.bgp.additional_paths.send == 'limit' %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' limit ' ~ vrf.address_family_ipv4.bgp.additional_paths.send_limit %}
-{%                 else %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' ' ~ vrf.address_family_ipv4.bgp.additional_paths.send %}
-{%                 endif %}
-{%                 if vrf.address_family_ipv4.bgp.additional_paths.prefix_list is arista.avd.defined and ipv4_add_path is arista.avd.defined %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' ' ~ vrf.address_family_ipv4.bgp.additional_paths.prefix_list %}
-{%                 endif %}
-{%                 if ipv4_add_path is arista.avd.defined %}
-         {{ ipv4_add_path }}
-{%                 endif %}
+{%             if vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit is arista.avd.defined %}
+         bgp additional-paths send ecmp limit {{ vrf.address_family_ipv4.bgp.additional_paths.send_ecmp_limit }}
+{%             elif vrf.address_family_ipv4.bgp.additional_paths.send_limit is arista.avd.defined %}
+         bgp additional-paths send limit {{ vrf.address_family_ipv4.bgp.additional_paths.send_limit }}
+{%             elif vrf.address_family_ipv4.bgp.additional_paths.send is arista.avd.defined %}
+         bgp additional-paths send {{ vrf.address_family_ipv4.bgp.additional_paths.send }}
 {%             endif %}
 {%             for neighbor in vrf.address_family_ipv4.neighbors | arista.avd.natural_sort('ip_address') %}
 {%                 if neighbor.activate is arista.avd.defined(true) %}
@@ -1970,21 +1933,12 @@ router bgp {{ router_bgp.as }}
 {%             if vrf.address_family_ipv6.bgp.additional_paths.receive is arista.avd.defined(true) %}
          bgp additional-paths receive
 {%             endif %}
-{%             if vrf.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
-{%                 set vrf_add_path = 'bgp additional-paths send' %}
-{%                 if vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and vrf.address_family_ipv6.bgp.additional_paths.send == 'ecmp' %}
-{%                     set vrf_add_path = vrf_add_path ~ ' ecmp limit ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit %}
-{%                 elif vrf.address_family_ipv6.bgp.additional_paths.send_limit is arista.avd.defined and vrf.address_family_ipv6.bgp.additional_paths.send == 'limit' %}
-{%                     set vrf_add_path = vrf_add_path ~  ' limit ' ~ vrf.address_family_ipv6.bgp.additional_paths.send_limit %}
-{%                 else %}
-{%                     set vrf_add_path = vrf_add_path ~ ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.send %}
-{%                 endif %}
-{%                 if vrf.address_family_ipv6.bgp.additional_paths.prefix_list is arista.avd.defined and vrf_add_path is arista.avd.defined %}
-{%                     set vrf_add_path = vrf_add_path ~ ' ' ~ vrf.address_family_ipv6.bgp.additional_paths.prefix_list %}
-{%                 endif %}
-{%                 if vrf_add_path is arista.avd.defined %}
-         {{ vrf_add_path }}
-{%                 endif %}
+{%             if vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit is arista.avd.defined %}
+         bgp additional-paths send ecmp limit {{ vrf.address_family_ipv6.bgp.additional_paths.send_ecmp_limit }}
+{%             elif vrf.address_family_ipv6.bgp.additional_paths.send_limit is arista.avd.defined %}
+         bgp additional-paths send limit {{ vrf.address_family_ipv6.bgp.additional_paths.send_limit }}
+{%             elif vrf.address_family_ipv6.bgp.additional_paths.send is arista.avd.defined %}
+         bgp additional-paths send {{ vrf.address_family_ipv6.bgp.additional_paths.send }}
 {%             endif %}
 {%             for neighbor in vrf.address_family_ipv6.neighbors | arista.avd.natural_sort('ip_address') %}
 {%                 if neighbor.activate is arista.avd.defined(true) %}
